# signless-gasless-session-service

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: lib.rs  session_generaion.rs
client/: Cargo.toml
example/: Cargo.toml  build.rs
example/app/: Cargo.toml
example/app/src/: lib.rs
example/client/: Cargo.toml  build.rs  sessions_client.idl
example/client/src/: lib.rs  sessions_client.rs
example/tests/: gtest.rs
session-service/: Cargo.toml
session-service/src/: lib.rs  macros.rs  utils.rs
src/: lib.rs
tests/: gtest.rs
