[workspace]
resolver = "2"
members = [
    "session-service", "example", "example/app", "example/client"
]


[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
gstd = "=1.6.2"
sails-idl-gen = "0.6.1"
sails-rs = { version = "0.6.1", features = ["gtest"] }
tokio = { version = "1.39", features = ["rt", "macros"] }
schnorrkel = { version = "0.10", default-features = false, features = ["u64_backend"] }
