[workspace]
resolver = "2"
members = [
    "session-service", "example", "example/app", "example/client"
]


[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
gstd = "=1.8.0"
sails-idl-gen = "=0.8.0"
sails-client-gen = "=0.8.0"
sails-rs = "=0.8.0"
tokio = { version = "1.39", features = ["rt", "macros"] }
schnorrkel = { version = "0.10", default-features = false, features = ["u64_backend"] }
