[package]
name = "sessions-client"
version = "0.1.0"
edition = "2021"

[dependencies]
mockall = { version = "0.12", optional = true }
sails-rs.workspace = true

[build-dependencies]
sessions-app = { path = "../app" }
sails-client-gen = "0.5.1"
sails-idl-gen = "0.5.1"

[features]
mocks = ["sails-rs/mockall", "dep:mockall"]
