[package]
name = "sessions-client"
version = "0.1.0"
edition = "2021"

[dependencies]
mockall = { version = "0.12", optional = true }
sails-rs.workspace = true

[build-dependencies]
sessions-app = { path = "../app" }
sails-rs = { workspace = true, features = ["build"] }

[features]
mocks = ["sails-rs/mockall", "dep:mockall"]
